# gateway-ng-controller-1

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  bors.toml  build.rs  log.json  static
.github/: CODEOWNERS
.github/workflows/: audit.yaml  ci.yaml  clippy.yaml  coverage.yaml
compose/: docker-compose.yaml  keycloak-realm.json
compose/control-plane/: Dockerfile  config.json
compose/envoy/: envoy.yaml
src/: cache.rs  configuration.rs  envoy_cds.rs  envoy_helpers.rs  envoy_lds.rs  main.rs  oidc.rs  processor.rs  protobuf.rs  service.rs  util.rs
wasm_filter/: Cargo.toml
wasm_filter/src/: config.rs  jwt.rs  lib.rs
