[package]
name = "gateway-ng-controller"
version = "0.1.0"
authors = ["Eloy Coto <eloy.coto@acalustra.com>"]
edition = "2018"
readme = "README.md"
exclude = [
    ".rustfmt.toml",
    ".gitignore",
    "bors.toml",
    "/.github/**",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
codecov = { repository = "3scale/gateway-ng-controller" }
maintenance = { status = "actively-developed" }

[dependencies]

async-stream = "^0"
futures = { version = "^0", default-features = false, features = ["alloc"] }
log = "^0"
prost = { version = "^0", default-features = false, features = ["prost-derive"] }
prost-types = { version = "^0", default-features = false }
tokio = { version = "^0", features = ["macros"] }
tokio-timer = "^0"
tonic = "^0"
serde_json = "^1"
serde = { version = "^1", features = ["derive"] }
lazy_static = "^1"

[build-dependencies]
tonic-build = "^0"
