[package]
name = "gateway-ng-controller"
version = "0.1.0"
authors = ["Eloy Coto <eloy.coto@acalustra.com>"]
edition = "2018"
readme = "README.md"
exclude = [
    ".rustfmt.toml",
    ".gitignore",
    "bors.toml",
    "/.github/**",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
codecov = { repository = "3scale/gateway-ng-controller" }
maintenance = { status = "actively-developed" }

[dependencies]

#async-stream = "^0"
futures = { version = "^0", default-features = false, features = ["alloc"] }
log = "^0"
env_logger="^0"
tokio = { version = "0.2.22", features = ["macros"] }
prost = { version = "^0", default-features = false, features = ["prost-derive"] }
prost-types = { version = "^0", default-features = false }
#tokio-timer = "^0"
tonic = "^0"
serde_json = "^1"
serde = { version = "^1", features = ["derive"] }
anyhow = "^1"

warp = "0.2.5"
ring = "0.16.15"
data-encoding = "2.3.0"

[build-dependencies]
tonic-build = "^0"
