[package]
name = "filter"
version = "0.1.0"
authors = ["Eloy Coto <eloy.coto@gmail.com>"]
edition = "2018"

[dependencies]
proxy-wasm = "0.1.0"
log = "0.4.8"
wasm-bindgen = "0.2.59"
chrono = "0.4.11"
wasm-bindgen-macro = "0.2.60"
serde_json = "^1"
serde = { version = "^1", features = ["derive"] }

anyhow = "^1"

prost = { version = "^0", default-features = false, features = ["prost-derive"] }
prost-types = { version = "^0", default-features = false }

[lib]
crate-type = ["cdylib"]
